templates/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  namespace: openutm
spec:
  ingressClassName: caddy
  rules:
    - host: "blender.${DOMAIN_NAME}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: blender
                port:
                  number: 8000
    - host: "passport.${DOMAIN_NAME}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: passport
                port:
                  number: 9000
    - host: "spotlight.${DOMAIN_NAME}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: spotlight
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-root
  namespace: openutm
spec:
  ingressClassName: caddy
  rules:
    - host: "${DOMAIN_NAME}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: spotlight
                port:
                  number: 5000
